# contracts

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yaml
contracts/: auth_pb2.py
placebrain_contracts/: auth_pb2.py  auth_pb2_grpc.py
placebrain_contracts/events/: __init__.py  auth.py  devices.py  places.py  telemetry.py  topics.py
proto/: auth.proto  collector.proto  devices.proto  places.proto
