[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contracts"
version = "0.1.0"
description = "Protocol buffer contracts package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf>=6.33.2",
]

[tool.hatchling.build.targets.wheel]
packages = ["contracts"]

[dependency-groups]
dev = [
    "mypy-protobuf>=4.0.0",
]
