[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "placebrain-contracts"
version = "0.15.0"
description = "Protocol buffer contracts and event schemas package"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "protobuf>=6.33.2",
    "grpcio>=1.76.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["placebrain_contracts"]

[dependency-groups]
dev = [
    "protobuf>=6.33.2",
    "grpcio-tools>=1.76.0",
    "mypy-protobuf>=4.0.0",
]
